src/FinancialForce ERP Core/objects/FeatureConsoleFeatureParameter__mdt.object
<CustomObject>
    <fields>
        <fullName>FeatureStep__c</fullName>
        <label>Feature Step</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParameterName__c</fullName>
        <label>Parameter Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParameterType__c</fullName>
        <label>Parameter Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParameterValueOnDisable__c</fullName>
        <label>Parameter Value On Disable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParameterValueOnEnable__c</fullName>
        <label>Parameter Value On Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Parameter</label>
    <pluralLabel>Feature Parameters</pluralLabel>
</CustomObject>